Version endpoint has incorrect path (GONRG-4432)
