# docs/v3/api_spec/unit_service_openapi_v3.json
@@ -91,53 +91,53 @@
 				}]
 			}
 		},
-        "/info": {
-            "get": {
-                "tags": [
-                    "info-api"
-                ],
-                "summary": "info",
-                "operationId": "infoUsingGET",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "data-partition-id",
-                        "in": "header",
-                        "description": "tenant",
-                        "required": true,
-                        "type": "string",
-                        "default": "opendes"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/VersionInfo"
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    },
-                    "404": {
-                        "description": "Not Found"
-                    }
-                },
-                "security": [
-                    {
-                        "Bearer Authorization": []
-                    }
-                ]
-            }
-        },
+		"/v3/info": {
+			"get": {
+				"tags": [
+					"info-api"
+				],
+				"summary": "info",
+				"operationId": "infoUsingGET",
+				"consumes": [
+					"application/json"
+				],
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"name": "data-partition-id",
+						"in": "header",
+						"description": "tenant",
+						"required": true,
+						"type": "string",
+						"default": "opendes"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "OK",
+						"schema": {
+							"$ref": "#/definitions/VersionInfo"
+						}
+					},
+					"401": {
+						"description": "Unauthorized"
+					},
+					"403": {
+						"description": "Forbidden"
+					},
+					"404": {
+						"description": "Not Found"
+					}
+				},
+				"security": [
+					{
+						"Bearer Authorization": []
+					}
+				]
+			}
+		},
 		"/v3/catalog": {
 			"get": {
 				"tags": ["unit-api-v-3"],
@@ -2259,36 +2259,50 @@
 			}
 		},
 		"VersionInfo": {
-            "type": "object",
-            "properties": {
-                "artifactId": {
-                    "type": "string"
-                },
-                "branch": {
-                    "type": "string"
-                },
-                "buildTime": {
-                    "type": "string"
-                },
-                "commitId": {
-                    "type": "string"
-                },
-                "commitMessage": {
-                    "type": "string"
-                },
-                "connectedOuterServices": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ConnectedOuterService"
-                    }
-                },
-                "groupId": {
-                    "type": "string"
-                },
-                "version": {
-                    "type": "string"
-                }
-            }
+			"type": "object",
+			"properties": {
+				"artifactId": {
+					"type": "string"
+				},
+				"branch": {
+					"type": "string"
+				},
+				"buildTime": {
+					"type": "string"
+				},
+				"commitId": {
+					"type": "string"
+				},
+				"commitMessage": {
+					"type": "string"
+				},
+				"connectedOuterServices": {
+					"type": "array",
+					"items": {
+						"$ref": "#/definitions/ConnectedOuterService"
+					}
+				},
+				"groupId": {
+					"type": "string"
+				},
+				"version": {
+					"type": "string"
+				}
+			}
+		},
+		"ConnectedOuterService": {
+			"type": "object",
+			"description": "Connected outer service information.",
+			"properties": {
+				"name": {
+					"type": "string",
+					"description": "Connected outer service name."
+				},
+				"version": {
+					"type": "string",
+					"description": "Connected outer service version."
+				}
+			}
 		}
 	}
 }
