# unit-core/src/main/java/org/opengroup/osdu/unitservice/api/InfoApi.java
@@ -27,7 +27,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping
+@RequestMapping("/v3")
 public class InfoApi {
 
   @Autowired
